fix: correct visibility

--- a/client/src/assets/styles/components/eventsDropdownList.scss
+++ b/client/src/assets/styles/components/eventsDropdownList.scss
@@ -55,6 +55,7 @@
   position: relative;
   top: 0;
   animation: down .5s ease-out;
+  z-index: 10;
 }
 ul {
   margin: 0;
